# gateway

./: .gitignore  Cargo.toml  broker.toml  dev.toml  mqtt_viewer.html  rumqttd.toml
arv/: Cargo.toml
arv/src/: main.rs
broker/: Cargo.toml
broker/src/: archive.rs  cli.rs  command.rs  device.rs  main.rs  mqtt_bridge.rs  service.rs  state.rs
broker/src/control/: commands.rs  mod.rs  protocol.rs
broker/src/control/commands/: device_commands.rs  resp_builders.rs  subcfg_commands.rs  validators.rs
broker/src/control/commands/device_commands/: action_commands.rs  query_commands.rs
cli/: Cargo.toml
cli/src/: cli.rs  device_config.rs  local_commands.rs  main.rs  mqtt_client.rs  repl.rs  resp_output.rs
common/: Cargo.toml
common/src/: archive.rs  lib.rs  storage.rs  tsmeta.rs
docs/: EdgeTSDB 专用时序数据库设计方案 .md  EdgeTSDB_可执行设计方案_v1.md  README.md  TEST_ENV_GUIDE.md  broker_p0_function_plan.md  storage-spec.md
gw/: Cargo.toml
gw-console/: package-lock.json  package.json
gw-console/src/: App.vue
gw-console/src-tauri/: Cargo.toml  tauri.conf.json
gw-console/src-tauri/src/: lib.rs  main.rs
gw/src/: cli.rs  control.rs  device.rs  hex.rs  main.rs  mqtt.rs  state.rs  tsdb.rs  tsstore.rs
tdb/: Cargo.toml
tdb/src/: config.rs  main.rs
tdb/src/api/: http.rs
tdb/src/cli/: doctor.rs  export.rs  mod.rs  stat.rs
tdb/src/flush/: mod.rs  parquet_writer.rs
tdb/src/ingress/: mod.rs
tdb/src/mem/: double_buffer.rs  mod.rs  time_window_buffer.rs
tdb/src/query/: datafusion_executor.rs  executor.rs  mod.rs
tdb/src/server/: mod.rs
tsd/: Cargo.toml
tsd/src/: main.rs
tsdbd/: Cargo.toml  build.rs
tsdbd/src/: config.rs  main.rs  model.rs
tsdbd/src/api/: http.rs
tsdbd/src/cli/: export.rs  mod.rs  perf.rs  query.rs  reindex.rs  stat.rs
tsdbd/src/flush/: flusher.rs
tsdbd/src/ingress/: mqtt_consumer.rs
tsdbd/src/mem/: time_window_buffer.rs  window_store.rs
tsdbd/src/query/: datafusion_executor.rs  duckdb_executor.rs  executor.rs  mod.rs  planner.rs
tsdbd/src/server/: mod.rs
tsdbd/src/wal/: mod.rs  recovery.rs  writer.rs
tst/: Cargo.toml
tst/src/: main.rs
