[package]
name = "arv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arrow = "56"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
common = { path = "../common" }
parquet = { version = "56", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
