[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
common = { path = "../common" }
config = "0.15"
dashmap = "6"
futures-util = { version = "0.3", features = ["sink"] }
arrow = "56"
parquet = { version = "56", features = ["arrow", "zstd"] }
rumqttd = "0.20"
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["clock"] }
