[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arrow = "56"
bytes = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
parquet = { version = "56", features = ["arrow", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
